--- a/public/404.html
+++ b/public/404.html
@@ -5,63 +5,94 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+      background-color: #00C7FD;
+      font-family: "Open Sans", "Helvetica", "sans-serif";
+    }
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .center-animation {
+      margin: auto;
+      margin-top: 40px;
+      position: relative;
+      width: 160px;
+      height: 160px;
+    }
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .error {
+      text-align: center;
+      padding: 0px;
+      font-size: 120px;
+    }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    .eye  {
+      width: 60px;
+      height: 110px;
+      border-radius: 50%;
+      background-color: white;
+      position: absolute;
+      border: 2px solid black;
+    }
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .eye-left {
+      left: 20px;
+      top: 40px;
+    }
+
+     .eye-right {
+      left: 120px;
+      top: 40px;
+    }
+
+    .pupil {
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      background-color: black;
+      border-radius: 50%;
+      left: 20px;
+      top: 70px;
+      transition: 1s ease;
+    }
+
+    .center-animation:hover .pupil {
+      left: 10px;
+      top: 16px;
+    }
+
+    .oops a {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      text-decoration: none;
+      color: black;
+      border: 4px solid #FF5600;
+      background-color: #FF5600;
+      padding: 10px;
+      font-size: 30px;
+      transition: background-color 0.4s, border 0,4s ease;
+    }
+
+    .oops a:hover {
+      border: 4px solid #393939;
+      background-color: #393939;
+      color: white;
+    }
+
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+  <div class="center-animation">
+  <div class="eye eye-left">
+    <div class="pupil pupil-left">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
+  <div class="eye eye-right">
+    <div class="pupil pupil-right">
+    </div>
+  </div>
+  </div>
+  <div class="error">The page you were looking for doesn't exist.</div>
+  <div class="oops"><a href="/">Go back to the homepage</a> </div>
+
 </body>
 </html>
