--- a/public/422.html
+++ b/public/422.html
@@ -5,63 +5,53 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-image: url("pull.gif");
+    background-size: cover;
+    background-color: #00C7FD;
     text-align: center;
-    font-family: arial, sans-serif;
+    font-family: "Open Sans", "Helvetica", "sans-serif";
     margin: 0;
   }
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+  .errorlink {
+    display: flex;
+    justify-content: center;
+    margin: auto;
   }
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error  {
+    color: white;
+    font-family: "Open Sans", "Helvetica", "sans-serif";
+    text-align: center;
+    font-size: 30px;
   }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  .error a {
+    margin-top: 100px;
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      border: 4px solid #FF5600;
+      background-color: #FF5600;
+      padding: 10px;
+      font-size: 30px;
+      transition: background-color 0.4s, border 0,4s ease;
+    }
+
+  .error a:hover {
+      border: 4px solid #393939;
+      background-color: #393939;
+      color: white;
   }
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+  <div class="error">
+  <h1>422</h1>
+  <p>Looks like we're having an error</p>
+  <div class="errorlink"><a href="/">Go back to the homepage</a></div>
   </div>
 </body>
 </html>
