--- a/public/404.html
+++ b/public/404.html
@@ -5,63 +5,32 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-      background-color: #00C7FD;
-      font-family: "Open Sans", "Helvetica", "sans-serif";
-    }
+    background-image: url("jongetje.gif");
+    background-size: cover;
+    background-color: #00C7FD;
+    text-align: center;
+    font-family: "Open Sans", "Helvetica", "sans-serif";
+    margin: 0;
+  }
 
-    .center-animation {
-      margin: auto;
-      margin-top: 40px;
-      position: relative;
-      width: 160px;
-      height: 160px;
-    }
+  .errorlink {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding-top: 40px;
+  }
 
-    .error {
+  .error  {
+    color: white;
+    font-family: "Open Sans", "Helvetica", "sans-serif";
+    text-align: center;
+    font-size: 30px;
+    padding-top: 40px;
+  }
+
+  .error a {
+      margin-top: 100px;
       text-align: center;
-      padding: 0px;
-      font-size: 120px;
-    }
-
-    .eye  {
-      width: 60px;
-      height: 110px;
-      border-radius: 50%;
-      background-color: white;
-      position: absolute;
-      border: 2px solid black;
-    }
-
-    .eye-left {
-      left: 20px;
-      top: 40px;
-    }
-
-     .eye-right {
-      left: 120px;
-      top: 40px;
-    }
-
-    .pupil {
-      position: absolute;
-      height: 30px;
-      width: 30px;
-      background-color: black;
-      border-radius: 50%;
-      left: 20px;
-      top: 70px;
-      transition: 1s ease;
-    }
-
-    .center-animation:hover .pupil {
-      left: 10px;
-      top: 16px;
-    }
-
-    .oops a {
-      position: absolute;
-      top: 10px;
-      right: 10px;
       text-decoration: none;
       color: black;
       border: 4px solid #FF5600;
@@ -69,30 +38,23 @@
       padding: 10px;
       font-size: 30px;
       transition: background-color 0.4s, border 0,4s ease;
+      border-radius: 5px;
     }
 
-    .oops a:hover {
+  .error a:hover {
       border: 4px solid #393939;
       background-color: #393939;
       color: white;
-    }
+  }
 
   </style>
 </head>
 
 <body>
-  <div class="center-animation">
-  <div class="eye eye-left">
-    <div class="pupil pupil-left">
-    </div>
+  <div class="error">
+  <h1>422</h1>
+  <p>Looks like we couldn't find this page</p>
+  <div class="errorlink"><a href="/">Go back to the homepage</a></div>
   </div>
-  <div class="eye eye-right">
-    <div class="pupil pupil-right">
-    </div>
-  </div>
-  </div>
-  <div class="error">The page you were looking for doesn't exist.</div>
-  <div class="oops"><a href="/">Go back to the homepage</a> </div>
-
 </body>
 </html>
