--- a/public/422.html
+++ b/public/422.html
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     margin: auto;
+    padding-top: 40px;
   }
 
   .error  {
@@ -24,6 +25,7 @@
     font-family: "Open Sans", "Helvetica", "sans-serif";
     text-align: center;
     font-size: 30px;
+    padding-top: 40px;
   }
 
   .error a {
@@ -36,6 +38,7 @@
       padding: 10px;
       font-size: 30px;
       transition: background-color 0.4s, border 0,4s ease;
+      border-radius: 5px;
     }
 
   .error a:hover {
