707 number of the unicorn

--- a/public/707.html
+++ b/public/707.html
@@ -47,6 +47,7 @@
       padding: 10px;
       font-size: 30px;
       transition: background-color 0.4s, border 0,4s ease;
+      border-radius: 5px;
     }
 
     .oops a:hover {
@@ -232,16 +233,16 @@
 </head>
 
 <body>
-  <div class="error e1">300</div>
-<div class="error e2">300</div>
-<div class="error e3">300</div>
-<div class="error e4">300</div>
-<div class="error e5">300</div>
- <div class="error e4 e11">300</div>
-<div class="error e3 e12">300</div>
-<div class="error e2 e13">300</div>
-<div class="error e5 e14">300</div>
-<div class="error e1 e15">300</div>
+  <div class="error e1">707</div>
+<div class="error e2">707</div>
+<div class="error e3">707</div>
+<div class="error e4">707</div>
+<div class="error e5">707</div>
+ <div class="error e4 e11">707</div>
+<div class="error e3 e12">707</div>
+<div class="error e2 e13">707</div>
+<div class="error e5 e14">707</div>
+<div class="error e1 e15">707</div>
 <div class="unicorn u1"> <img src="29749-200.png" alt="errorunicorn">  </div>
 <div class="unicorn u2"> <img src="29749-200.png" alt="errorunicorn">  </div>
 <div class="unicorn u3"> <img src="29749-200.png" alt="errorunicorn">  </div>
